# BBC-Domesday

./: .gitignore  claude.md  comm_n_frame_index_full.txt  comm_s_frame_index_full.txt  pyproject.toml
docs/: index.md
docs/bcpl-source/: manifest-constants.md  procedures.md
docs/data-structures/: dataset-header.md  g-nw-vector.md  tables.md
docs/file-formats/: community-files.md  data-files.md  gallery.md  names.md  nm-dataset.md
docs/modules/: community-modules.md  index.md  national-modules.md  system-layer.md
docs/navigation/: movement.md  plan-navigation.md  view-model.md
docs/tools/: cli-reference.md
scripts/: build_static.py
src/domesday/: __init__.py  __main__.py  catalogue.py  export.py  frame_index.py  models.py  nm_reader.py  parser.py  server.py
src/domesday/static/: index-static.html  index.html  nm.html
tests/: test_parser.py  test_server.py
