[project]
name = "domesday"
version = "0.1.0"
description = "BBC Domesday Walk/Gallery dataset parser and web navigator"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
domesday-server = "domesday.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
